test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/valid/libraries/external_var_scoping_client.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: x
        CSingleInit: 
          CConstant: 
            CConstInt: 
              TInt: 10
            None: 
          None: 
        Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: read_x
        List[0]: 
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CEqual: 
                  CVar: 
                    TIdentifier: x
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 0
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[4]: 
                      CS: 
                        CIf: 
                          CBinary: 
                            CNotEqual: 
                            CFunctionCall: 
                              TIdentifier: read_x
                              List[0]: 
                              None: 
                            CConstant: 
                              CConstInt: 
                                TInt: 10
                              None: 
                            None: 
                          CReturn: 
                            CConstant: 
                              CConstInt: 
                                TInt: 1
                              None: 
                          None: 
                      CD: 
                        CVarDecl: 
                          CVariableDeclaration: 
                            TIdentifier: x
                            None: 
                            Int: 
                            CExtern: 
                      CS: 
                        CIf: 
                          CBinary: 
                            CNotEqual: 
                            CVar: 
                              TIdentifier: x
                              None: 
                            CConstant: 
                              CConstInt: 
                                TInt: 10
                              None: 
                            None: 
                          CReturn: 
                            CConstant: 
                              CConstInt: 
                                TInt: 1
                              None: 
                          None: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 0
                            None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 1
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
