test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_types/conflicting_variable_linkage_2.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 3
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CCompound: 
                CB: 
                  List[1]: 
                    CD: 
                      CVarDecl: 
                        CVariableDeclaration: 
                          TIdentifier: x
                          None: 
                          Int: 
                          CExtern: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: x
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: x
        CSingleInit: 
          CConstant: 
            CConstInt: 
              TInt: 10
            None: 
          None: 
        Int: 
        CStatic: 
